# Python-Learning

docker_demo/: MANIFEST.in  README.md  dockerfile  pyproject.toml
docker_demo/docker_demo/: app.py
docker_demo/docker_demo/templates/: adder.html  image.html  index.html  text.html
sqlite3/: doc_datatypes.py  doc_row_factory.py  usage_sqlite3.md
sqlite3/tutorial/: test.py
